@@ -1,5 +1,12 @@
 2006-08-30  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
+	* src/thbrk/thbrk.c (brk_do): (Optimization) Unified the recovered
+	node immediately. Chance is that it gets superseded, rather than
+	picked up in later loop. Rearranged code to eliminate source
+	duplications.
+
+2006-08-30  Theppitak Karoonboonyanan  <thep@linux.thai.net>
+
 	* src/thbrk/thbrk.c (brk_do): (Optimization) When unifying converted
 	nodes, clear all matches rather than just the first.
 
@@ -1046,13 +1053,13 @@
 	* Makefile.am (1.2), configure.in (1.2), include/Makefile.am (1.2,
 	r0_1_1, r0_1_0), include/thai/Makefile.am (1.2), src/Makefile.am
 	(1.2), src/thcoll/Makefile.am (1.2, r0_1_1, r0_1_0),
-	tests/Makefile.am (1.2): Add $Id: ChangeLog,v 1.98.2.14 2006-08-30 07:03:25 thep Exp $
+	tests/Makefile.am (1.2): Add $Id: ChangeLog,v 1.98.2.15 2006-08-30 08:16:20 thep Exp $
 
 2001-06-12 Tuesday 20:14  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
 	* src/thcoll/cweight.c (1.2, r0_1_0), src/thcoll/cweight.h (1.2,
 	r0_1_0), src/thcoll/thcoll.c (1.2), tests/test-thcoll.sh (1.2,
-	r0_1_1, r0_1_0), tests/thsort.c (1.2, r0_1_1, r0_1_0): Add $Id: ChangeLog,v 1.98.2.14 2006-08-30 07:03:25 thep Exp $
+	r0_1_1, r0_1_0), tests/thsort.c (1.2, r0_1_1, r0_1_0): Add $Id: ChangeLog,v 1.98.2.15 2006-08-30 08:16:20 thep Exp $
 
 2001-06-12 Tuesday 20:12  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
